--- a/DatabaseReader/DatabaseReader/DatabaseReader.csproj
+++ b/DatabaseReader/DatabaseReader/DatabaseReader.csproj
@@ -292,8 +292,8 @@
     <Content Include="Views\Days\Days.cshtml" />
     <Content Include="Views\Details\Details.cshtml" />
     <Content Include="Views\UserSettings\EditUserSettings.cshtml" />
+    <Content Include="Views\Workout\Index.cshtml" />
     <Content Include="Views\Workout\CreateWorkout.cshtml" />
-    <Content Include="Views\Workout\DisplayWorkout.cshtml" />
     <Content Include="Scripts\moment.min.js.map" />
     <Content Include="Scripts\moment-with-locales.min.js.map" />
   </ItemGroup>
