--- a/DatabaseReader/DatabaseReaderTests/DatabaseReaderTests.csproj
+++ b/DatabaseReader/DatabaseReaderTests/DatabaseReaderTests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="TestData\TestDataObject.cs" />
     <Compile Include="Helpers\ChartSeriesHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
